--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ julia:
 notifications:
   email: false
 # uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("POMDPBounds"); Pkg.test("POMDPBounds"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.add("POMDPs")'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("POMDPBounds"); Pkg.test("POMDPBounds"; coverage=true)'
